Add Heading and two input fields for weight and height and a button for  calculation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>I love JavaScript</p>
+    <div class="container">
+        <h1 id="heading">BMI Calculator</h1>
+        <input type="number" id="weight">
+        <input type="number" id="height">
+        <button id="btn">Calculate</button>
+    </div>
 </body>
 </html>
