--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <div class="container">
         <h1 id="heading">BMI Calculator</h1>
-        <input type="number" id="weight">
-        <input type="number" id="height">
-        <button id="btn">Calculate</button>
+        <input type="number" id="weight" placeholder="Weight">
+        <input type="number" id="height" placeholder="Height">
+        <button id="btn" onclick="calculateBMI()">Calculate</button>
+        <div id="result"></div>
     </div>
+    
+
+    <script src="./script.js"></script>
 </body>
 </html>
