--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="container">
         <h1 id="heading">BMI Calculator</h1>
-        <input type="number" id="weight" placeholder="Weight">
-        <input type="number" id="height" placeholder="Height">
+        <input type="number" id="weight" placeholder="Weight (Kgs)">
+        <input type="number" id="height" placeholder="Height (m)">
         <button id="btn" onclick="calculateBMI()">Calculate</button>
+        <br>
         <div id="result"></div>
     </div>
     
